@@ -1,0 +1,1 @@
+select col1, col2, col3 from table1 order by col1, col2, col3;
